--- a/index_orig.html
+++ b/index_orig.html
@@ -5,7 +5,8 @@
   <link rel="stylesheet" type="text/css" href="Css/normalize.css">
   <!-- <link rel="stylesheet" type="text/css" href="Css/CSS.css"> -->
   <link rel="stylesheet" type="text/css" href="Css/base.css">
-
+  <script type="text/javascript" src="JavaScript/jquery-1.11.3.min.js"></script>
+  <script src="JavaScript/universal.js"></script>
 </head>
 
 <body>
@@ -30,14 +31,10 @@
 
     </section>
     <footer>
-      <ul>
-	    <li class="footer-links"> <a href="index.html">Home</a> <span class="bullet">&bull;</span></li>
-	    <li class="footer-links"> <a href="about-us.html">About Us</a></li>
-    </ul>
+      <a href="index.html">Home</a> &bull;
+      <a href="about-us.html">About Us</a>
     </footer>
   </main>
-  <script src="JavaScript/jquery-1.11.3.min.js"></script>
-  <script src="JavaScript/universal.js"></script>
   <script type="text/javascript" src="JavaScript/app.js"></script>
 </body>
 </html>
