--- a/puzzle1.html
+++ b/puzzle1.html
@@ -5,7 +5,7 @@
 
   <title>Echelon.JS</title>
   <link rel="stylesheet" type="text/css" href="Css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="Css/CSS.css">
+  <link rel="stylesheet" type="text/css" href="Css/base.css">
   <script src="JavaScript/universal.js"></script>
 </head>
 
