IT WORKS AMINA HELPED

--- a/puzzle1.html
+++ b/puzzle1.html
@@ -42,12 +42,12 @@
 		<article class="question>">
 		<p>True or False:</p>
 		{{#if preCode}}
-		<pre><code>{{preCode}}</code></pre>
+		<pre><code>{{{preCode}}}</code></pre>
 		{{/if}}
 		<p>{{{tfStatment}}}<p>
 
 		<form>
-			<button id="ans-True" value>TRUE</button>
+			<button id="ans-True" >TRUE</button>
 			<button id="ans-False">FALSE</button></br>
 		</form>
 		</article>
@@ -72,4 +72,3 @@
   <script type="text/javascript" src="JavaScript/puzzle1.js"></script>
 </body>
 </html>
-
