--- a/testHTML/puzzle1.html
+++ b/testHTML/puzzle1.html
@@ -22,7 +22,7 @@
       </div>
     </div>
 
-	<div id="question-holder">
+	<div id="question-tf-holder">
 
 
 	</div>
@@ -33,7 +33,7 @@
   <a href="about-us.html">About Us</a>
 </footer>
   </main>
-  <script type="text/x-handlebars-template" id="question-template">
+  <script type="text/x-handlebars-template" id="question-tf-template">
   	<section class="progress">
       <div id="puzzle-{{questionNum}}">Door {{questionNum}}/10</div>
     </section>
