--- a/testHTML/puzzle2.html
+++ b/testHTML/puzzle2.html
@@ -31,7 +31,8 @@
       <a href="about-us.html">About Us</a>
     </footer>
   </main>
-  <script type="text/x-handlebars-template" id="question-template">
+
+  <script type="text/x-handlebars-template" id="question-MC-template">
     <section class="progress">
       <div id="puzzle-{{questionNum}}">Door {{questionNum}}/10</div>
     </section>
