--- a/testHTML/puzzle3.html
+++ b/testHTML/puzzle3.html
@@ -34,7 +34,7 @@
   </footer>
 
  </main>
- <script type="text/x-handlebars-template" id="question-template">
+ <script type="text/x-handlebars-template" id="question-Text-template">
    <section class="progress">
      <div id="puzzle-{{questionNum}}">Door {{questionNum}}/10</div>
    </section>
