This commit makes Puzzles on all pages work on one page

--- a/puzzles.html
+++ b/puzzles.html
@@ -154,7 +154,7 @@
 
   <script src="JavaScript/jquery-1.11.3.min.js"></script>
   <script src="JavaScript/lib/handlebars-v4.0.5.js"></script>
-  <script type="text/javascript" src="JavaScript/puzzle10.js"></script>
-  <script type="text/javascript" src="JavaScript/puzzle4.js"></script>
+  <script type="text/javascript" src="JavaScript/puzzleData.js"></script>
+  <script type="text/javascript" src="JavaScript/puzzleMain.js"></script>
 </body>
 </html>
