This commit converts vanilla javaScript to jQuery for all html pages

--- a/puzzles.html
+++ b/puzzles.html
@@ -31,10 +31,13 @@
   <div id="question-Text-holder">
   </div>
 
-<footer>
-  <a href="index.html">Home</a> &bull;
-  <a href="about-us.html">About Us</a>
-</footer>
+  <footer>
+    <ul>
+       <li class="footer-links"> <a href="index.html">Home</a> <span class="bullet">&bull;</span></li>
+       <li class="footer-links"> <a href="about-us.html">About Us</a></li>
+    </ul>
+  </footer>
+  
   </main>
 
   <script type="text/x-handlebars-template" id="question-tf-template">
