--- a/Fail.html
+++ b/Fail.html
@@ -21,22 +21,13 @@
 			 <button id="return-button" class="hidden">Return to Main Screen</button>
 			</section>
 
-			 <footer>
-      <a href="index.html">Home</a> &bull;
-      <a href="about-us.html">About Us</a>
+		<footer>
+      <ul>
+	       <li class="footer-links"> <a href="index.html">Home</a> <span class="bullet">&bull;</span></li>
+	       <li class="footer-links"> <a href="about-us.html">About Us</a></li>
+      </ul>
     </footer>
   </main>
-    <script type="text/javascript" src="JavaScript/app.js"></script>
-    </body>
+  <script type="text/javascript" src="JavaScript/app.js"></script>
+</body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
