--- a/about-us.html
+++ b/about-us.html
@@ -116,10 +116,12 @@
     </section>
 
 
-    <footer>
-      <a href="index.html">Home</a> &bull;
-      <a href="about-us.html">About Us</a>
-    </footer>
+  <footer>
+    <ul>
+       <li class="footer-links"> <a href="index.html">Home</a> <span class="bullet">&bull;</span></li>
+       <li class="footer-links"> <a href="about-us.html">About Us</a></li>
+    </ul>
+  </footer>
 
   <script type="text/javascript" src="JavaScript/aboutus.js"></script>
 </body>
