--- a/success.html
+++ b/success.html
@@ -24,34 +24,38 @@
 
 
 
-  <section class="screen" style="min-height:662px;">
-    <div id="congrats">
-      <h1 id="congrats-head">Congratulations!</h1>
-      <h2><span id="well-done">You have done well, Agent</span> <span id="putAlias"></span>.</h2>
-      <p>You have passed through all the challenges and reached the central room.</p>
-      <br>
-    </div>
+    <section class="screen" style="min-height:662px;">
+      <div id="congrats">
+        <h1 id="congrats-head">Congratulations!</h1>
+        <h2><span id="well-done">You have done well, Agent</span> <span id="putAlias"></span>.</h2>
+        <p>You have passed through all the challenges and reached the central room.</p>
+        <br>
+      </div>
 
-    <p><span id="clickText">Click</span> on the <span id="vaultText">vault</span> to open and retrieve the package.</p>
-    <div id="slugHover"></div>
-    <div id="slugClick"></div>
-    <div id="door">
-     <img id="left" src="img/doorLeft.png" />
-     <img id="center" src="img/doorCenter.png" />
-     <img id="right" src="img/doorRight.png" />
-    </div>
+      <p><span id="clickText">Click</span> on the <span id="vaultText">vault</span> to open and retrieve the package.</p>
+      <div id="slugHover"></div>
+      <div id="slugClick"></div>
+      <div id="door">
+       <img id="left" src="img/doorLeft.png" />
+       <img id="center" src="img/doorCenter.png" />
+       <img id="right" src="img/doorRight.png" />
+      </div>
 
-    <div id="prize" class="hidden">
-      <br>
-      <img src="img/twinkie.png" width="300" id="twinkie">
-      <code>You have retrieved the last remaining supply of twinkies known to man.</code>
-    </div>
+      <div id="prize" class="hidden">
+        <br>
+        <img src="img/twinkie.png" width="300" id="twinkie">
+        <code>You have retrieved the last remaining supply of twinkies known to man.</code>
+      </div>
 
-  </section>
+    </section>
+
     <footer>
-      <a href="index.html">Home</a> &bull;
-      <a href="about-us.html">About Us</a>
+      <ul>
+         <li class="footer-links"> <a href="index.html">Home</a> <span class="bullet">&bull;</span></li>
+         <li class="footer-links"> <a href="about-us.html">About Us</a></li>
+      </ul>
     </footer>
+
   </main>
     <script type="text/javascript" src="JavaScript/success.js"></script>
 </body>
