takes out dev debug code fixes minor bugs

--- a/Fail.html
+++ b/Fail.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Echelon.JS</title>
 	<link rel="stylesheet" type="text/css" href="Css/normalize.css">
-	<link type="text/css" rel="stylesheet" href="Css/CSS.css"/>
+	<link type="text/css" rel="stylesheet" href="Css/base.css"/>
 	<script type="text/javascript" src="JavaScript/jquery-1.11.3.min.js"></script>
   <script src="JavaScript/universal.js"></script>
 </head>
