--- a/about-us.html
+++ b/about-us.html
@@ -3,7 +3,7 @@
 <head>
   <title>Echelon.JS</title>
   <link rel="stylesheet" type="text/css" href="Css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="Css/CSS.css">
+  <link rel="stylesheet" type="text/css" href="Css/base.css">
   <link rel="stylesheet" type="text/css" href="Css/aboutus.css">
   <script type="text/javascript" src="JavaScript/jquery-1.11.3.min.js"></script>
 </head>
