--- a/success.html
+++ b/success.html
@@ -4,7 +4,7 @@
 <head>
   <title>Echelon.JS</title>
   <link rel="stylesheet" type="text/css" href="Css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="Css/CSS.css">
+  <link rel="stylesheet" type="text/css" href="Css/base.css">
   <link rel="stylesheet" type="text/css" href="Css/success.css">
   <script type="text/javascript" src="JavaScript/jquery-1.11.3.min.js"></script>
   <script src="JavaScript/universal.js"></script>
